fix[bbt-55]: fixes collapse menu font size

--- a/src/editor/styles/base.scss
+++ b/src/editor/styles/base.scss
@@ -17,6 +17,13 @@
 	display: none;
 }
 
+/**
+* Fixes collapse button font size when editor is open
+*/
+#collapse-button {
+	font-size: 13px;
+}
+
 .theme-settings-page-wrapper {
 	margin: 0;
 }
